--- a/src/report/trustymail_report.mustache
+++ b/src/report/trustymail_report.mustache
@@ -346,7 +346,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% DHS Image Watermark
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% The watermarks are known to me acting a little wonky.  I created
+% The watermarks are known to be acting a little wonky.  I created
 % cisagov/trustymail_reporter#54 to document this.
 \backgroundsetup{
   pages=some,
